--- a/AppTool/build.gradle
+++ b/AppTool/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.8'
     implementation 'com.github.yangchong211.YCStatusBar:StatusBarLib:1.4.6'
     implementation project(path: ':AppUpdateLib')
+    implementation project(path: ':KeyEventLib')
     //其他
     implementation project(path: ':RoundCorners')
     implementation project(path: ':MonitorFileLib')
