--- a/AppCommon/build.gradle
+++ b/AppCommon/build.gradle
@@ -35,72 +35,72 @@ dependencies {
     implementation rootProject.ext.dependencies["material"]
 
     //base基类
-    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.4.8'
-    implementation 'com.github.yangchong211.YCCommonLib:ComponentLib:1.4.8'
-    //工具类utils
-    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.8'
-    //activity栈管理
-    implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.4.8'
-    //通用缓存存储库，支持sp，fastsp，mmkv，lruCache，DiskLruCache等
-    implementation 'com.github.yangchong211.YCCommonLib:AppBaseStore:1.4.8'
-    //通用日志输出库
-    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.4.8'
-    //app重启库
-    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.4.8'
-    //intent内容输出到控制台
-    implementation 'com.github.yangchong211.YCCommonLib:SafeIntentLib:1.4.8'
-    //通用组件接口库
-    implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.4.8'
-    //各种广播监听哭
-    implementation 'com.github.yangchong211.YCCommonLib:AppStatusLib:1.4.8'
-    //基建库
-    implementation 'com.github.yangchong211.YCCommonLib:ArchitectureLib:1.4.8'
-    //同上上报库
-    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.4.8'
-    //权限库
-    implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.4.8'
-    //Lru磁盘缓存库
-    implementation 'com.github.yangchong211.YCCommonLib:AppLruDisk:1.4.8'
-    //Lru内存缓存库
-    implementation 'com.github.yangchong211.YCCommonLib:AppLruCache:1.4.8'
-    //fragment生命周期监听库
-    implementation 'com.github.yangchong211.YCCommonLib:FragmentManager:1.4.8'
-    //反射工具库
-    implementation 'com.github.yangchong211.YCCommonLib:ReflectionLib:1.4.8'
-    //App启动优化库
-    implementation 'com.github.yangchong211.YCCommonLib:ParallelTaskLib:1.4.8'
-    //Context上下文库
-    implementation 'com.github.yangchong211.YCCommonLib:AppContextLib:1.4.8'
-    //加解密库
-    implementation 'com.github.yangchong211.YCCommonLib:AppEncryptLib:1.4.8'
-    //handler包装库
-    implementation 'com.github.yangchong211.YCCommonLib:AppHandlerLib:1.4.8'
-    //Application库
-    //implementation 'com.github.yangchong211.YCCommonLib:ApplicationLib:1.4.8'
-    //store磁盘分区库
-    implementation 'com.github.yangchong211.YCCommonLib:AppMediaStore:1.4.8'
-    //内存
-    implementation 'com.github.yangchong211.YCCommonLib:ToolMemoryLib:1.4.8'
-    //屏幕截屏库
-    implementation 'com.github.yangchong211.YCCommonLib:AppScreenLib:1.4.8'
-    //Wi-Fi库
-    implementation 'com.github.yangchong211.YCCommonLib:AppWiFiLib:1.4.8'
-    //Vp相关适配器库
-    implementation 'com.github.yangchong211.YCCommonLib:BaseVpAdapter:1.4.8'
-    //io流读写库
-    implementation 'com.github.yangchong211.YCCommonLib:FileIoHelper:1.4.8'
-    //图片工具库
-    implementation 'com.github.yangchong211.YCCommonLib:ImageToolLib:1.4.8'
-    //网络判断库
-    implementation 'com.github.yangchong211.YCCommonLib:NetWorkLib:1.4.8'
-    //手机
-    implementation 'com.github.yangchong211.YCCommonLib:PhoneSensor:1.4.8'
-    //File文件库
-    implementation 'com.github.yangchong211.YCCommonLib:ToolFileLib:1.4.8'
-    //Zip压缩库
-    implementation 'com.github.yangchong211.YCCommonLib:ZipFileLib:1.4.8'
-    //图片压缩
-    implementation 'com.github.yangchong211.YCCommonLib:AppCompress:1.4.8'
+//    implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.4.8'
+//    implementation 'com.github.yangchong211.YCCommonLib:ComponentLib:1.4.8'
+//    //工具类utils
+//    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.8'
+//    //activity栈管理
+//    implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.4.8'
+//    //通用缓存存储库，支持sp，fastsp，mmkv，lruCache，DiskLruCache等
+//    implementation 'com.github.yangchong211.YCCommonLib:AppBaseStore:1.4.8'
+//    //通用日志输出库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.4.8'
+//    //app重启库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.4.8'
+//    //intent内容输出到控制台
+//    implementation 'com.github.yangchong211.YCCommonLib:SafeIntentLib:1.4.8'
+//    //通用组件接口库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppCommonInter:1.4.8'
+//    //各种广播监听哭
+//    implementation 'com.github.yangchong211.YCCommonLib:AppStatusLib:1.4.8'
+//    //基建库
+//    implementation 'com.github.yangchong211.YCCommonLib:ArchitectureLib:1.4.8'
+//    //同上上报库
+//    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.4.8'
+//    //权限库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.4.8'
+//    //Lru磁盘缓存库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppLruDisk:1.4.8'
+//    //Lru内存缓存库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppLruCache:1.4.8'
+//    //fragment生命周期监听库
+//    implementation 'com.github.yangchong211.YCCommonLib:FragmentManager:1.4.8'
+//    //反射工具库
+//    implementation 'com.github.yangchong211.YCCommonLib:ReflectionLib:1.4.8'
+//    //App启动优化库
+//    implementation 'com.github.yangchong211.YCCommonLib:ParallelTaskLib:1.4.8'
+//    //Context上下文库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppContextLib:1.4.8'
+//    //加解密库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppEncryptLib:1.4.8'
+//    //handler包装库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppHandlerLib:1.4.8'
+//    //Application库
+//    //implementation 'com.github.yangchong211.YCCommonLib:ApplicationLib:1.4.8'
+//    //store磁盘分区库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppMediaStore:1.4.8'
+//    //内存
+//    implementation 'com.github.yangchong211.YCCommonLib:ToolMemoryLib:1.4.8'
+//    //屏幕截屏库
+//    implementation 'com.github.yangchong211.YCCommonLib:AppScreenLib:1.4.8'
+//    //Wi-Fi库
+////    implementation 'com.github.yangchong211.YCCommonLib:AppWiFiLib:1.4.8'
+//    //Vp相关适配器库
+//    implementation 'com.github.yangchong211.YCCommonLib:BaseVpAdapter:1.4.8'
+//    //io流读写库
+//    implementation 'com.github.yangchong211.YCCommonLib:FileIoHelper:1.4.8'
+//    //图片工具库
+//    implementation 'com.github.yangchong211.YCCommonLib:ImageToolLib:1.4.8'
+//    //网络判断库
+//    //implementation 'com.github.yangchong211.YCCommonLib:NetWorkLib:1.4.8'
+//    //手机
+//    implementation 'com.github.yangchong211.YCCommonLib:PhoneSensor:1.4.8'
+//    //File文件库
+//    implementation 'com.github.yangchong211.YCCommonLib:ToolFileLib:1.4.8'
+//    //Zip压缩库
+//    implementation 'com.github.yangchong211.YCCommonLib:ZipFileLib:1.4.8'
+//    //图片压缩
+//    implementation 'com.github.yangchong211.YCCommonLib:AppCompress:1.4.8'
 
 
     //其他
@@ -108,6 +108,7 @@ dependencies {
 
     //公共类
     implementation project(path: ':BaseClassLib')
+    implementation project(path: ':AppContextLib')
     implementation project(path: ':ApplicationLib')
     implementation project(path: ':BaseVpAdapter')
     implementation project(path: ':ToolUtilsLib')
@@ -127,6 +128,8 @@ dependencies {
     implementation project(path: ':FileIoHelper')
     implementation project(path: ':AppMediaStore')
     implementation project(path: ':AppEncryptLib')
+    implementation project(path: ':NetWorkLib')
+    implementation project(path: ':AppWiFiLib')
     //其他
     implementation project(path: ':RoundCorners')
     implementation project(path: ':LibraryLayer')
