--- a/PlayerLib/VideoPlayer/build.gradle
+++ b/PlayerLib/VideoPlayer/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation project(':VideoSurface')
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
     implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.4'
+    implementation project(':NetWorkLib')
     /*//这两个是必须要加的，其它的可供选择
     //ijk播放器
     implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
