--- a/CommonLib/AppWiFiLib/src/main/AndroidManifest.xml
+++ b/CommonLib/AppWiFiLib/src/main/AndroidManifest.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yc.appwifilib">
+    <!--允许一个程序访问精良位置(如GPS)-->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <!--获取WIFI信息状态-->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <!--获取网络信息状态-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <!--改变WIFI状态-->
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <!--改变网络状态-->
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
 </manifest>
