--- a/WidgetLib/SecondaryScreen/src/main/AndroidManifest.xml
+++ b/WidgetLib/SecondaryScreen/src/main/AndroidManifest.xml
@@ -2,4 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yc.sceondary">
 
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.SYSTEM_OVERLAY_WINDOW" />
+
+
 </manifest>
