--- a/AppTool/build.gradle
+++ b/AppTool/build.gradle
@@ -50,5 +50,14 @@ dependencies {
     implementation project(path: ':TransitionHelper')
     implementation project(path: ':LibraryLayer')
     implementation project(path: ':AnimBusiness')
+
+    //通用日志输出库
+    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.4.8'
+    implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
+    implementation project(':ThreadPoolLib')
+    implementation project(':EasyExecutor')
+    implementation project(':LooperThread')
+//    implementation 'com.github.yangchong211.YCThreadPool:ThreadPoolLib:1.3.7'
+//    implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
 }
 
