--- a/AppTool/src/main/AndroidManifest.xml
+++ b/AppTool/src/main/AndroidManifest.xml
@@ -13,10 +13,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
+        <activity android:name=".ToolMainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".UploadActivity"/>
         <activity android:name=".transition.VideoPlayActivity"
             android:theme="@style/TransparentActivityDialog"/>
         <activity android:name=".transition.TransitionActivity"/>
+        <activity android:name="com.yc.apptool.thread.ThreadMainActivity"/>
+        <activity android:name="com.yc.apptool.thread.ExecutorsTestActivity"/>
+        <activity android:name="com.yc.apptool.thread.ThreadActivity"/>
+        <activity android:name="com.yc.apptool.thread.EasyExecutorActivity"/>
+        <activity android:name="com.yc.apptool.thread.ThreadPollActivity"/>
+        <activity android:name=".looper.LoopThreadActivity"/>
     </application>
 
 </manifest>
