--- a/WidgetLib/WebViewLib/build.gradle
+++ b/WidgetLib/WebViewLib/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation project(path: ':ImageToolLib')
     implementation project(path: ':NetWorkLib')
     implementation project(path: ':NetInterceptor')
+    implementation project(path: ':AppClickHelper')
     //x5库
     //仅仅在编译时使用，但最终不会被编译到apk或aar里
     //provided files('libs/tbs_sdk_thirdapp_v4.3.0.3_43903_sharewithdownloadwithfile_withoutGame_obfs_20200402_121309.jar')
