--- a/WidgetLib/RoundCorners/build.gradle
+++ b/WidgetLib/RoundCorners/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation(rootProject.ext.dependencies["constraintlayout"])
+    implementation project(path: ':ToolUtilsLib')
 }
