--- a/CommonLib/NetWorkLib/build.gradle
+++ b/CommonLib/NetWorkLib/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
     implementation project(path: ':AppContextLib')
+    //轻量级异步线程封装库：https://github.com/yangchong211/YCThreadPool
+    implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
 }
