--- a/ToolLib/AdbHelper/build.gradle
+++ b/ToolLib/AdbHelper/build.gradle
@@ -3,8 +3,6 @@
 //}
 apply plugin: 'com.android.library'
 apply from: rootProject.projectDir.absolutePath + "/yc.gradle"
-//迁移到jitpack
-apply plugin: 'com.github.dcendents.android-maven'
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
@@ -32,4 +30,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
+    implementation project(path: ':ToolUtilsLib')
+    implementation project(path: ':AppContextLib')
+    implementation project(path: ':ToolFileLib')
 }
