--- a/AppTool/build.gradle
+++ b/AppTool/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation project(':ThreadPoolLib')
     implementation project(':EasyExecutor')
     implementation project(':LooperThread')
+    implementation project(':InterceptorTime')
 //    implementation 'com.github.yangchong211.YCThreadPool:ThreadPoolLib:1.3.7'
 //    implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
 }
