--- a/MonitorLib/MonitorCpuLib/src/main/AndroidManifest.xml
+++ b/MonitorLib/MonitorCpuLib/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yc.cpu" >
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNA" />
 
     <application>
     </application>
