--- a/MonitorLib/MonitorPhone/build.gradle
+++ b/MonitorLib/MonitorPhone/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation project(path: ':ToolMemoryLib')
     implementation project(path: ':NetWorkLib')
     implementation project(path: ':AppWiFiLib')
+    implementation project(path: ':MonitorFlow')
     //轻量级异步线程封装库：https://github.com/yangchong211/YCThreadPool
     implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
     //    implementation 'com.github.yangchong211.YCCommonLib:ToolMemoryLib:1.4.4'
@@ -46,6 +47,5 @@ dependencies {
 //    implementation 'com.github.yangchong211.YCCommonLib:AppContextLib:1.4.4'
 //    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.4'
 //    implementation 'com.github.yangchong211.YCCommonLib:NetWorkLib:1.4.4'
-    //权限库
 //    implementation 'com.github.yangchong211.YCCommonLib:AppPermission:1.4.4'
 }
