--- a/settings.gradle
+++ b/settings.gradle
@@ -38,7 +38,7 @@ project(':LibraryLayer').projectDir = new File('Business/LibraryLayer')
 include ':ImageServer', ':HttpServer', ':ShareServer', ':NfcServer',
         ':GsonServer', ':IpcServer', ':ObjectEqualLib', ':TcpServerLib', ':TcpManager',
         ':EasyBleServer', ':LogUpload', ':OkHttpServer', ':PrivateServer',
-        ':AppLogClient', ':AppLogService', ':NetInterceptor', ':SignalHooker',
+        ':AppLogClient', ':AppLogService', ':NetInterceptor', ':SignalHooker', ':NetChange',
         ':GlideProgressLib', ':CompressServer', ':RetrofitNetLib', ':Transformation', ':GrpcServer'
 project(':ImageServer').projectDir = new File('ServerLib/ImageServer')
 project(':HttpServer').projectDir = new File('ServerLib/HttpServer')
@@ -62,6 +62,7 @@ project(':Transformation').projectDir = new File('ServerLib/Transformation')
 project(':TcpServerLib').projectDir = new File('ServerLib/TcpServerLib')
 project(':TcpManager').projectDir = new File('ServerLib/TcpManager')
 project(':GrpcServer').projectDir = new File('ServerLib/GrpcServer')
+project(':NetChange').projectDir = new File('ServerLib/NetChange')
 
 
 /* +++++++++ 框架公共组件层 +++++++++ */
