--- a/ServerLib/PrivateServer/build.gradle
+++ b/ServerLib/PrivateServer/build.gradle
@@ -31,4 +31,8 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation(rootProject.ext.dependencies["constraintlayout"])
+    //工具类utils
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.8'
+    implementation 'com.github.yangchong211.YCCommonLib:AppContextLib:1.4.8'
+    implementation project(path: ':NetWorkLib')
 }
