--- a/AppMonitor/build.gradle
+++ b/AppMonitor/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation project(path: ':MonitorTimeLib')
     implementation project(path: ':MonitorNetLib')
     implementation project(path: ':MonitorApmLib')
+    implementation project(path: ':AppClickHelper')
 
 //    implementation project(path: ':LeakCanarySdk')
 //    implementation project(':LeakAndroid')
