--- a/ToolLib/KeyEventLib/build.gradle
+++ b/ToolLib/KeyEventLib/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     //工具类utils
     implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.8'
     implementation project(path: ':AppClickHelper')
+    implementation project(path: ':ToastUtils')
 }
