--- a/AppMvx/build.gradle
+++ b/AppMvx/build.gradle
@@ -36,9 +36,13 @@ dependencies {
     implementation(rootProject.ext.dependencies["annotation"])
     implementation(rootProject.ext.dependencies["constraintlayout"])
     //其他
-    implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
-    implementation project(path: ':ToolUtilsLib')
+//    implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
+    implementation project(path: ':ToastUtils')
     implementation project(path: ':RoundCorners')
     implementation project(path: ':NetWorkLib')
     implementation project(path: ':AppWiFiLib')
+    implementation project(path: ':KeyEventLib')
+    implementation project(path: ':SecondaryScreen')
+    implementation project(path: ':AppClickHelper')
+    implementation project(path: ':ToolUtilsLib')
 }
