--- a/ServerLib/GrpcServer/build.gradle
+++ b/ServerLib/GrpcServer/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'io.grpc:grpc-protobuf-lite:1.33.0'
     implementation 'io.grpc:grpc-stub:1.33.0'
     implementation 'org.apache.tomcat:annotations-api:6.0.53'
+    implementation project(path: ':DataCloneLib')
 }
